--- a/examples/reactnative/android/settings.gradle
+++ b/examples/reactnative/android/settings.gradle
@@ -31,7 +31,7 @@ extensions.configure(com.facebook.react.ReactSettingsExtension) { ex ->
 }
 expoAutolinking.useExpoModules()
 
-rootProject.name = 'reactnative'
+rootProject.name = 'Grip Connect'
 
 expoAutolinking.useExpoVersionCatalog()
 
