--- a/packages/cli/deno.json
+++ b/packages/cli/deno.json
@@ -1,6 +1,6 @@
 {
-  "name": "@hangtime/grip-connect",
-  "version": "0.7.0",
+  "name": "@hangtime/grip-connect-cli",
+  "version": "0.8.0",
   "license": "BSD-2-Clause",
   "exports": {
     ".": "./src/index.ts"
