Add download functions

--- a/packages/capacitor/package.json
+++ b/packages/capacitor/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hangtime/grip-connect-capacitor",
-  "version": "0.8.1",
+  "version": "0.8.2",
   "description": "Capacitor plugin for Grip Connect devices",
   "type": "module",
   "main": "dist/index.js",
@@ -15,8 +15,9 @@
     "build": "tsc --build"
   },
   "dependencies": {
-    "@capacitor-community/bluetooth-le": "^7.1.0",
-    "@hangtime/grip-connect": "^0.8.1"
+    "@capacitor-community/bluetooth-le": "^7.1.1",
+    "@capacitor/filesystem": "^7.0.1",
+    "@hangtime/grip-connect": "^0.8.2"
   },
   "devDependencies": {
     "typescript": "^5.8.3"
