--- a/examples/capacitor/package.json
+++ b/examples/capacitor/package.json
@@ -14,12 +14,12 @@
     "open:ios": "npx cap open ios"
   },
   "dependencies": {
-    "@capacitor-community/bluetooth-le": "^7.1.0",
+    "@capacitor-community/bluetooth-le": "^7.1.1",
     "@capacitor/android": "^7.2.0",
     "@capacitor/core": "^7.2.0",
     "@capacitor/ios": "^7.2.0",
     "@capacitor/splash-screen": "^7.0.1",
-    "@hangtime/grip-connect-capacitor": "file:../../packages/capacitor"
+    "@hangtime/grip-connect-capacitor": "^0.8.2"
   },
   "devDependencies": {
     "@capacitor/cli": "^7.2.0",
