--- a/examples/reactnative/package.json
+++ b/examples/reactnative/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
+    "prebuild": "expo prebuild",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo run:android",
     "ios": "expo run:ios",
@@ -13,6 +14,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
     "@hangtime/grip-connect-react-native": "^0.8.2",
+    "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^7.3.13",
     "@react-navigation/elements": "^2.4.2",
@@ -20,6 +22,7 @@
     "expo": "~53.0.9",
     "expo-blur": "~14.1.4",
     "expo-constants": "~17.1.5",
+    "expo-device": "~7.1.4",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.1.7",
@@ -30,20 +33,23 @@
     "expo-symbols": "^0.4.4",
     "expo-system-ui": "~5.0.7",
     "expo-web-browser": "~14.1.6",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-native": "0.79.2",
     "react-native-ble-plx": "^3.5.0",
-    "react-native-gesture-handler": "~2.25.0",
-    "react-native-reanimated": "~3.17.4",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-reanimated": "~3.17.5",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
+    "react-native-svg": "^15.12.0",
     "react-native-web": "^0.20.0",
     "react-native-webview": "13.13.5"
   },
   "devDependencies": {
     "@babel/core": "^7.27.1",
-    "@types/react": "~19.1.4",
+    "@react-native-community/cli": "^18.0.0",
+    "@types/react": "~19.0.10",
     "eslint": "^9.27.0",
     "eslint-config-expo": "~9.2.0",
     "typescript": "~5.8.3"
