--- a/examples/reactnative/ios/Podfile
+++ b/examples/reactnative/ios/Podfile
@@ -13,7 +13,7 @@ install! 'cocoapods',
 
 prepare_react_native_project!
 
-target 'reactnative' do
+target 'GripConnect' do
   use_expo_modules!
 
   if ENV['EXPO_USE_COMMUNITY_AUTOLINKING'] == '1'
