--- a/examples/reactnative/package.json
+++ b/examples/reactnative/package.json
@@ -14,18 +14,18 @@
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
     "@hangtime/grip-connect-react-native": "^0.8.4",
-    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-async-storage/async-storage": "~2.1.2",
     "@react-native-picker/picker": "^2.11.1",
-    "@react-navigation/bottom-tabs": "^7.4.2",
-    "@react-navigation/elements": "^2.5.2",
-    "@react-navigation/native": "^7.1.14",
+    "@react-navigation/bottom-tabs": "^7.4.5",
+    "@react-navigation/elements": "^2.6.2",
+    "@react-navigation/native": "^7.1.17",
     "expo": "~53.0.19",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.7",
     "expo-device": "~7.1.4",
     "expo-font": "~13.3.2",
     "expo-haptics": "~14.1.4",
-    "expo-image": "~2.3.2",
+    "expo-image": "~2.4.0",
     "expo-linking": "~7.1.7",
     "expo-router": "~5.1.3",
     "expo-splash-screen": "^0.30.10",
@@ -35,22 +35,22 @@
     "expo-web-browser": "~14.2.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-native": "0.79.2",
+    "react-native": "0.79.5",
     "react-native-ble-plx": "^3.5.0",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "~3.17.5",
     "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.10.0",
-    "react-native-svg": "^15.12.0",
+    "react-native-screens": "~4.11.1",
+    "react-native-svg": "~15.11.2",
     "react-native-web": "^0.20.0",
     "react-native-webview": "13.13.5"
   },
   "devDependencies": {
     "@babel/core": "^7.28.0",
-    "@react-native-community/cli": "^18.0.0",
+    "@react-native-community/cli": "19.0.0",
     "@types/react": "~19.0.10",
-    "eslint": "^9.31.0",
+    "eslint": "^9.32.0",
     "eslint-config-expo": "~9.2.0",
     "typescript": "~5.8.3"
   },
