--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,9 @@
   ],
   // Visit https://aka.ms/tsconfig to read more about this file
   "compilerOptions": {
+    // Projects
+    "composite": true,
+
     // File Layout
     // "rootDir": "./src",
     // "outDir": "./dist",
