--- a/packages/react-native/package.json
+++ b/packages/react-native/package.json
@@ -1,10 +1,14 @@
 {
   "name": "@hangtime/grip-connect-react-native",
-  "version": "0.8.6",
+  "version": "0.8.7",
   "description": "React Native module for Grip Connect devices",
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "files": [
+    "dist",
+    "src"
+  ],
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
@@ -15,7 +19,7 @@
     "build": "tsc --build"
   },
   "dependencies": {
-    "@hangtime/grip-connect": "^0.8.6",
+    "@hangtime/grip-connect": "^0.8.7",
     "react-native-ble-plx": "^3.5.0"
   },
   "devDependencies": {
