--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,11 +1,15 @@
 {
   "name": "@hangtime/grip-connect",
-  "version": "0.8.6",
+  "version": "0.8.7",
   "description": "Griptonite Motherboard, Tindeq Progressor, PitchSix Force Board, WHC-06, Entralpi, Climbro, mySmartBoard: Bluetooth API Force-Sensing strength analysis for climbers",
   "type": "module",
   "main": "./dist/cjs/index.js",
   "module": "./dist/index.js",
   "types": "dist/index.d.ts",
+  "files": [
+    "dist",
+    "src"
+  ],
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
