--- a/examples/reactnative/package.json
+++ b/examples/reactnative/package.json
@@ -12,47 +12,47 @@
     "lint": "expo lint"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.1.0",
+    "@expo/vector-icons": "^15.0.2",
     "@hangtime/grip-connect-react-native": "^0.9.0",
-    "@react-native-async-storage/async-storage": "~2.1.2",
-    "@react-native-picker/picker": "^2.11.2",
+    "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-picker/picker": "2.11.1",
     "@react-navigation/bottom-tabs": "^7.4.7",
     "@react-navigation/elements": "^2.6.4",
     "@react-navigation/native": "^7.1.17",
-    "expo": "~53.0.22",
-    "expo-blur": "~14.1.5",
-    "expo-constants": "~17.1.7",
-    "expo-device": "~7.1.4",
-    "expo-font": "~13.3.2",
-    "expo-haptics": "~14.1.4",
-    "expo-image": "~2.4.0",
-    "expo-linking": "~7.1.7",
-    "expo-router": "~5.1.5",
-    "expo-splash-screen": "^0.30.10",
-    "expo-status-bar": "~2.2.3",
-    "expo-symbols": "^0.4.5",
-    "expo-system-ui": "~5.0.11",
-    "expo-web-browser": "~14.2.0",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "react-native": "0.79.5",
+    "expo": "~54.0.9",
+    "expo-blur": "~15.0.7",
+    "expo-constants": "~18.0.9",
+    "expo-device": "~8.0.8",
+    "expo-font": "~14.0.8",
+    "expo-haptics": "~15.0.7",
+    "expo-image": "~3.0.8",
+    "expo-linking": "~8.0.8",
+    "expo-router": "~6.0.7",
+    "expo-splash-screen": "~31.0.10",
+    "expo-status-bar": "~3.0.8",
+    "expo-symbols": "~1.0.7",
+    "expo-system-ui": "~6.0.7",
+    "expo-web-browser": "~15.0.7",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-native": "0.81.4",
     "react-native-ble-plx": "^3.5.0",
     "react-native-chart-kit": "^6.12.0",
-    "react-native-gesture-handler": "~2.24.0",
-    "react-native-reanimated": "~3.17.5",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.11.1",
-    "react-native-svg": "~15.11.2",
-    "react-native-web": "^0.20.0",
-    "react-native-webview": "13.13.5"
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-reanimated": "~4.1.0",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.12.1",
+    "react-native-web": "^0.21.1",
+    "react-native-webview": "13.15.0"
   },
   "devDependencies": {
     "@babel/core": "^7.28.4",
-    "@react-native-community/cli": "19.0.0",
-    "@types/react": "~19.0.10",
-    "eslint": "^9.35.0",
-    "eslint-config-expo": "~9.2.0",
-    "typescript": "~5.8.3"
+    "@react-native-community/cli": "20.0.2",
+    "@types/react": "~19.1.10",
+    "eslint": "^9.36.0",
+    "eslint-config-expo": "~10.0.0",
+    "typescript": "~5.9.2"
   },
   "private": true
 }
