--- a/examples/reactnative/package.json
+++ b/examples/reactnative/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "reactnative",
+  "name": "@grip-connect/reactnative",
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
@@ -13,7 +13,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.2",
-    "@hangtime/grip-connect-react-native": "^0.9.0",
+    "@hangtime/grip-connect-react-native": "^0.9.1",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-picker/picker": "2.11.1",
     "@react-navigation/bottom-tabs": "^7.4.7",
