--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
     "build:examples:kilter-board": "npm run build && npm run build --workspace ./examples/kilter-board",
     "build:examples:pong": "npm run build && npm run build --workspace ./examples/pong",
     "build:examples:reactnative": "npm run build && npm run build --workspace ./examples/reactnative",
+    "changeset": "changeset",
+    "changeset:version": "changeset version",
+    "changeset:publish": "changeset publish",
     "prepare": "husky"
   },
   "workspaces": [
@@ -45,17 +48,18 @@
     "examples/*"
   ],
   "devDependencies": {
-    "@eslint/js": "^9.33.0",
+    "@changesets/cli": "^2.29.7",
+    "@eslint/js": "^9.36.0",
     "@types/eslint__js": "^8.42.3",
-    "@types/node": "^20.19.17",
+    "@types/node": "^20.19.19",
     "@types/web-bluetooth": "^0.0.21",
     "eslint": "^9.36.0",
     "globals": "^16.4.0",
     "husky": "^9.1.7",
-    "jiti": "^2.5.1",
+    "jiti": "^2.6.1",
     "prettier": "^3.6.2",
     "ts-node": "^10.9.2",
-    "typescript": "^5.9.2",
-    "typescript-eslint": "^8.44.0"
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.45.0"
   }
 }
