--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -31,6 +31,9 @@
     "build:esm": "tsc -p tsconfig.json",
     "build": "npm run build:cjs && npm run build:esm"
   },
+  "devDependencies": {
+    "typescript": "^5.9.3"
+  },
   "author": "Stevie-Ray Hartog <mail@stevie-ray.nl>",
   "license": "BSD-2-Clause",
   "repository": {
