allow to upload images to kilterboard

--- a/examples/kilter-board/package.json
+++ b/examples/kilter-board/package.json
@@ -9,6 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^7.1.0",
+    "@fortawesome/free-brands-svg-icons": "^7.1.0",
+    "@fortawesome/free-regular-svg-icons": "^7.1.0",
+    "@fortawesome/free-solid-svg-icons": "^7.1.0",
     "@hangtime/grip-connect": "^0.9.1"
   },
   "devDependencies": {
