--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
     "lint:check": "eslint .",
     "format": "prettier --write .",
     "format:check": "prettier --list-different .",
+    "dev:cli": "npm run dev --workspace ./packages/cli",
     "dev:docs": "npm run docs:dev --workspace ./packages/docs",
     "dev:examples:capacitor": "npm run start --workspace ./examples/capacitor",
     "dev:examples:chart": "npm run dev --workspace ./examples/chart",
+    "dev:examples:cli": "npm run dev --workspace ./examples/cli",
     "dev:examples:flappy-bird": "npm run dev --workspace ./examples/flappy-bird",
     "dev:examples:kilter-board": "npm run dev --workspace ./examples/kilter-board",
     "dev:examples:pong": "npm run dev --workspace ./examples/pong",
     "dev:examples:reactnative": "npm run start --workspace ./examples/reactnative",
+    "dev:examples:runtime": "npm run start --workspace ./examples/runtime",
     "preview:docs": "npm run preview --workspace ./packages/docs",
     "preview:examples:capacitor": "npm run preview --workspace ./examples/capacitor",
     "preview:examples:chart": "npm run preview --workspace ./examples/chart",
@@ -33,8 +36,9 @@
     "build:capacitor": "npm run build --workspace ./packages/capacitor",
     "build:cli": "npm run build --workspace ./packages/cli",
     "build:core": "npm run build --workspace ./packages/core",
-    "build:react-native": "npm run build --workspace ./packages/react-native",
     "build:docs": "npm run docs:build --workspace ./packages/docs",
+    "build:react-native": "npm run build --workspace ./packages/react-native",
+    "build:runtime": "npm run build --workspace ./packages/runtime",
     "build:examples:capacitor": "npm run build && npm run build --workspace ./examples/capacitor",
     "build:examples:chart": "npm run build && npm run build --workspace ./examples/chart",
     "build:examples:flappy-bird": "npm run build && npm run build --workspace ./examples/flappy-bird",
@@ -57,7 +61,7 @@
     "@types/node": "22.19.2",
     "@types/web-bluetooth": "^0.0.21",
     "eslint": "^9.39.2",
-    "globals": "^17.2.0",
+    "globals": "^17.3.0",
     "husky": "^9.1.7",
     "jiti": "^2.6.1",
     "prettier": "^3.8.1",
