--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -5,6 +5,9 @@
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "bin": {
+    "grip-connect": "./dist/index.js"
+  },
   "files": [
     "dist",
     "src"
@@ -15,15 +18,27 @@
       "import": "./dist/index.js"
     }
   },
+  "engines": {
+    "node": ">=22"
+  },
   "scripts": {
-    "build": "tsc --build"
+    "clean": "rm -rf dist tsconfig.tsbuildinfo",
+    "build": "npm run clean && tsc --build",
+    "dev": "tsx src/index.ts",
+    "prepublishOnly": "npm run build"
   },
   "dependencies": {
     "@hangtime/grip-connect": "^0.9.1",
-    "webbluetooth": "^3.4.0"
+    "@hangtime/grip-connect-runtime": "^0.9.1",
+    "@inquirer/input": "^4.3.1",
+    "@inquirer/select": "^5.0.4",
+    "commander": "^14.0.3",
+    "ora": "^8.2.0",
+    "picocolors": "^1.1.1"
   },
   "devDependencies": {
     "@types/node": "^22.19.2",
+    "tsx": "^4.19.4",
     "typescript": "^5.9.3"
   },
   "author": "Stevie-Ray Hartog <mail@stevie-ray.nl>",
