--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,16 +1,21 @@
-name: Publish Package to npmjs
+name: Publish Package to NPM and JSR
+
 on:
   release:
     types: [created]
+
+concurrency:
+  group: release
+  cancel-in-progress: false
+
 jobs:
-  release:
+  build:
     runs-on: ubuntu-latest
     permissions:
       contents: read
-      id-token: write
     steps:
       - name: Checkout
-        uses: actions/checkout@v5
+        uses: actions/checkout@v6
 
       - name: Setup Node
         uses: actions/setup-node@v6
@@ -30,8 +35,39 @@ jobs:
       - name: Build
         run: npm run build
 
+      - name: Prepare workspace
+        run: rsync -a --exclude=node_modules . release/
+
+      - name: Upload workspace
+        uses: actions/upload-artifact@v6
+        with:
+          name: workspace
+          path: release
+
+  publish-npm:
+    needs: build
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+    steps:
+      - name: Download workspace
+        uses: actions/download-artifact@v7
+        with:
+          name: workspace
+          path: .
+
+      - name: Setup Node
+        uses: actions/setup-node@v6
+        with:
+          node-version: 22
+          registry-url: "https://registry.npmjs.org"
+
+      - name: Install dependencies
+        working-directory: ./release
+        run: npm ci
+
       - name: Publish Core NPM package
-        working-directory: ./packages/core
+        working-directory: ./release/packages/core
         run: |
           if [ ! -d "dist" ]; then
             echo "Error: dist directory not found in packages/core"
@@ -42,7 +78,7 @@ jobs:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
       - name: Publish Runtime NPM package
-        working-directory: ./packages/runtime
+        working-directory: ./release/packages/runtime
         run: |
           if [ ! -d "dist" ]; then
             echo "Error: dist directory not found in packages/runtime"
@@ -53,7 +89,7 @@ jobs:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
       - name: Publish CLI NPM package
-        working-directory: ./packages/cli
+        working-directory: ./release/packages/cli
         run: |
           if [ ! -d "dist" ]; then
             echo "Error: dist directory not found in packages/cli"
@@ -64,25 +100,43 @@ jobs:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
       - name: Publish Capacitor NPM package
-        working-directory: ./packages/capacitor
+        working-directory: ./release/packages/capacitor
         run: npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
       - name: Publish React Native NPM package
-        working-directory: ./packages/react-native
+        working-directory: ./release/packages/react-native
         run: npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
+  publish-jsr:
+    needs: build
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      id-token: write
+    steps:
+      - name: Download workspace
+        uses: actions/download-artifact@v7
+        with:
+          name: workspace
+          path: .
+
+      - name: Setup Node
+        uses: actions/setup-node@v6
+        with:
+          node-version: 22
+
       - name: Publish Core JSR package
-        working-directory: ./packages/core
+        working-directory: ./release/packages/core
         run: npx jsr publish
 
       - name: Publish Runtime JSR package
-        working-directory: ./packages/runtime
+        working-directory: ./release/packages/runtime
         run: npx jsr publish
 
       - name: Publish CLI JSR package
-        working-directory: ./packages/cli
+        working-directory: ./release/packages/cli
         run: npx jsr publish
