--- a/examples/flappy-bird/package.json
+++ b/examples/flappy-bird/package.json
@@ -13,7 +13,8 @@
   },
   "devDependencies": {
     "typescript": "^5.9.3",
-    "vite": "^7.3.1"
+    "vite": "^7.3.1",
+    "vite-plugin-pwa": "^1.2.0"
   },
   "workspaces": [
     "examples"
