use asciichart to display max and avg lines, rename cli package

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -6,7 +6,7 @@
   "linked": [
     [
       "@hangtime/grip-connect",
-      "@hangtime/grip-connect-cli",
+      "@hangtime/cli",
       "@hangtime/grip-connect-capacitor",
       "@hangtime/grip-connect-react-native",
       "@hangtime/grip-connect-runtime"
