--- a/packages/cli/deno.json
+++ b/packages/cli/deno.json
@@ -1,6 +1,6 @@
 {
-  "name": "@hangtime/grip-connect-cli",
-  "version": "0.10.5",
+  "name": "@hangtime/cli",
+  "version": "0.10.6",
   "license": "BSD-2-Clause",
   "exports": {
     ".": "./src/index.ts"
