chore: harden changeset publish pipeline

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,6 +40,11 @@ jobs:
       - name: Build
         run: npm run build
 
+      - name: Verify npm auth
+        run: npm whoami
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+
       - name: Version or Publish (Changesets)
         id: changesets
         uses: changesets/action@v1
