--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -6,6 +6,9 @@
   "main": "./dist/cjs/index.js",
   "module": "./dist/index.js",
   "types": "dist/index.d.ts",
+  "publishConfig": {
+    "access": "public"
+  },
   "files": [
     "dist",
     "src"
