--- a/package.json
+++ b/package.json
@@ -58,9 +58,9 @@
   "devDependencies": {
     "@changesets/cli": "^2.29.8",
     "@eslint/js": "^10.0.1",
-    "@types/node": "22.19.2",
+    "@types/node": "^22.19.11",
     "@types/web-bluetooth": "^0.0.21",
-    "eslint": "^10.0.0",
+    "eslint": "^10.0.1",
     "globals": "^17.3.0",
     "husky": "^9.1.7",
     "jiti": "^2.6.1",
